# mcp-order-flow-server

./: .env.example  .gitignore  LICENSE  README.md  dev_start.sh  generate_proto.sh  pyproject.toml  requirements.txt  test_tool.py
docs/: api_examples.md  architecture.md  sequence_diagram.md
src/: __init__.py  config.py  mcp_server.py
src/background/: __init__.py  processor_service.py
src/formatters/: __init__.py  state_manager.py
src/processors/: __init__.py  behavior_analyzer.py  metrics_calculator.py  order_flow_processor.py  pattern_detector.py
src/storage/: __init__.py  grpc_client.py  redis_client.py
src/tools/: __init__.py  order_flow_tool.py
