[project]
name = "mcp-order-flow-server"
version = "1.0.0"
description = "MCP Server providing real-time order flow analysis for options trading decisions"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "redis>=5.0.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "python-dotenv>=1.0.0"
]
authors = [
    {name = "Sayantan", email = "sayantanbhow@gmail.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0"
]

[project.scripts]
mcp-order-flow-server = "mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
